# Weather_Notification

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: run_pipeline.yml  test.yml
data/processed/: weather_processed.parquet
scripts/: setup_secrets.md
src/: main.py
src/alerts/: conditions.py  notifiers.py
src/config/: settings.py
src/extract/: api_client.py
src/load/: storage.py
src/transform/: processors.py
src/utils/: logging.py
tests/: test_alerts.py  test_extract.py  test_transform.py
